--- a/packages/base-ng/src/component/view/view-data.component.scss
+++ b/packages/base-ng/src/component/view/view-data.component.scss
@@ -1,7 +1,8 @@
 .view-mode-choice {
-  position: absolute;
+  //position: absolute;
   margin-top: 5px;
   right: 20px;
+  text-align: right;
 }
 
 .btn-group-sm > .btn, .btn-sm {
