--- a/packages/app/src/app/components/grids/list-view/list-view-demo.component.html
+++ b/packages/app/src/app/components/grids/list-view/list-view-demo.component.html
@@ -1,21 +1,16 @@
-<h5>Simple HTML Table</h5>
+<h5>List View Grid</h5>
 
 
-<div class="d-flex">
-  <div class=" d-inline-flex">
-    <div class="form-group">
-      <label for="maxRows">Change amount of generated records</label>
-      <input [(ngModel)]="maxRows"
-             (ngModelChange)="update('maxRows',$event)"
-             type="text"
-             class="form-control"
-             id="maxRows">
-    </div>
 
-  </div>
-</div>
+<datatable-options
+  [options]="options"
+  [viewModes]="viewModes"
+  [(maxRows)]="maxRows"
+  (optionsChange)="optionsUpdated($event)">
+</datatable-options>
 
-<datatable-options [options]="options" (optionsChange)="optionsUpdated($event)"></datatable-options>
+
+MaxRow: {{maxRows}}
 
 <txs-datatable
   [component]="simpleTableComp"
@@ -23,7 +18,6 @@
   [maxRows]="maxRows"
   [rows]="rows"
   [options]="options"
-  (doQuery)="doQuery($event)"
   (gridReady)="onGridReady($event)"
 >
 </txs-datatable>
