--- a/packages/app/src/app/components/grids/datatable-options/datatable-options.component.html
+++ b/packages/app/src/app/components/grids/datatable-options/datatable-options.component.html
@@ -5,13 +5,13 @@
   <div class="form-check m-1">
     <input class="form-check-input" type="checkbox" value="" id="f1"
            [(ngModel)]="options.insertable"
-           (ngModelChange)="update()">
+           (ngModelChange)="update()" disabled="true">
     <label class="form-check-label" for="f1"> Insertable </label>
   </div>
   <div class="form-check m-1">
     <input class="form-check-input" type="checkbox" value="" id="f2"
            [(ngModel)]="options.editable"
-           (ngModelChange)="update()">
+           (ngModelChange)="update()" disabled="true">
     <label class="form-check-label" for="f2"> Editable </label>
   </div>
 </div>
@@ -53,9 +53,9 @@
 
 <ng-content></ng-content>
 
-<div class=" d-inline-flex">
-    <pre>
-      {{ options | json }}
-      Max: {{ maxRows }}
-    </pre>
-</div>
+<!--<div class=" d-inline-flex">-->
+<!--    <pre>-->
+<!--      {{ options | json }}-->
+<!--      Max: {{ maxRows }}-->
+<!--    </pre>-->
+<!--</div>-->
