--- a/packages/app/src/app/components/grids/list-view/list-view-demo.component.html
+++ b/packages/app/src/app/components/grids/list-view/list-view-demo.component.html
@@ -1,16 +1,36 @@
 <h5>List View Grid</h5>
 
 
-
 <datatable-options
   [options]="options"
   [viewModes]="viewModes"
   [(maxRows)]="maxRows"
   (optionsChange)="optionsUpdated($event)">
+
+  <div class="d-flex  flex-row" *ngIf="options.mode === 'infinite'">
+    <div class="m-1">
+      <strong>Infinite mode:</strong>
+    </div>
+    <div class="form-check m-1" *ngFor="let m of getInfiniteMode()">
+      <input class="form-check-input" name="infiniteMode" type="radio"
+             [value]="m.name" id="r-{{m.name}}"
+             (click)="update('infinite-mode', m.name)" [checked]="options.infiniteMode === m.name">
+      <label class="form-check-label" for="r-{{m.name}}"> {{ m.name }}</label>
+    </div>
+
+    <div class="m-1">
+      <strong>Adapt Scrollbar:</strong>
+    </div>
+    <div class="form-check m-1">
+      <input class="form-check-input" type="checkbox" value="" id="as"
+             [(ngModel)]="options.adaptScrollbar"
+             (ngModelChange)="update('adapt-scrollbar', null)">
+      <label class="form-check-label" for="as"> Adapt scrollbar</label>
+    </div>
+
+  </div>
+
 </datatable-options>
-
-
-MaxRow: {{maxRows}}
 
 <txs-datatable
   [component]="simpleTableComp"
