--- a/packages/tasks-ng/src/components/log-viewer/tasks-log-viewer.component.html
+++ b/packages/tasks-ng/src/components/log-viewer/tasks-log-viewer.component.html
@@ -1,9 +1,8 @@
 <div class="log-viewer">
   <div class="row">
     <div class="col-md-8">
-
     </div>
-    <div class="col-md-4 text-right">
+    <div class="col-md-4 text-right" *ngIf="allowSwitchMode">
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" [checked]="mode === 'tail'"
                 id="inlineRadio1" (click)="mode = 'tail'">
