fix: multiple fixes

--- a/packages/app/src/app/components/grids/list-view/list-view-demo.component.html
+++ b/packages/app/src/app/components/grids/list-view/list-view-demo.component.html
@@ -18,15 +18,15 @@
       <label class="form-check-label" for="r-{{m.name}}"> {{ m.name }}</label>
     </div>
 
-    <div class="m-1">
-      <strong>Adapt Scrollbar:</strong>
-    </div>
-    <div class="form-check m-1">
-      <input class="form-check-input" type="checkbox" value="" id="as"
-             [(ngModel)]="options.adaptScrollbar"
-             (ngModelChange)="update('adapt-scrollbar', null)">
-      <label class="form-check-label" for="as"> Adapt scrollbar</label>
-    </div>
+<!--    <div class="m-1">-->
+<!--      <strong>Adapt Scrollbar:</strong>-->
+<!--    </div>-->
+<!--    <div class="form-check m-1">-->
+<!--      <input class="form-check-input" type="checkbox" value="" id="as"-->
+<!--             [(ngModel)]="options.adaptScrollbar"-->
+<!--             (ngModelChange)="update('adapt-scrollbar', null)">-->
+<!--      <label class="form-check-label" for="as"> Adapt scrollbar</label>-->
+<!--    </div>-->
 
   </div>
 
