--- a/packages/app/src/app/components/grids/simple-table/simple-table-demo.component.html
+++ b/packages/app/src/app/components/grids/simple-table/simple-table-demo.component.html
@@ -8,13 +8,13 @@
 </datatable-options>
 
 
-<div class="d-flex">
-  <button class="btn btn-primary" (click)="rebuild()">Rebuild</button>
-  <button class="btn btn-primary" (click)="reset()">Reset</button>
-</div>
+<!--<div class="d-flex">-->
+<!--  <button class="btn btn-primary" (click)="rebuild()">Rebuild</button>-->
+<!--  <button class="btn btn-primary" (click)="reset()">Reset</button>-->
+<!--</div>-->
 
 <txs-datatable
-  [component]="simpleTableComp"
+  [component]="comp"
   [columns]="columns"
   [maxRows]="maxRows"
   [options]="options"
