--- a/packages/app/src/app/components/grids/tables-demo.component.html
+++ b/packages/app/src/app/components/grids/tables-demo.component.html
@@ -2,10 +2,10 @@
 
   <h5>Simple HTML Table</h5>
 
-  <txs-simple-html-table
+  <txs-simple-table
     [columns]="staticdata_1.columns"
     [rows]="staticdata_1.rows"
-  ></txs-simple-html-table>
+  ></txs-simple-table>
 
   <h5>Simple HTML Table (over wrapper)</h5>
 
