refactor: fix some build problems

--- a/packages/ng-theme-base/src/scss/themes/admin/_styles.scss
+++ b/packages/ng-theme-base/src/scss/themes/admin/_styles.scss
@@ -4,7 +4,7 @@ $fa-css-prefix: 'bat-icons';
 @import "@fortawesome/fontawesome-free/scss/mixins";
 @import "@fortawesome/fontawesome-free/scss/core";
 @import "@fortawesome/fontawesome-free/scss/variables";
-// @import "~@fortawesome/fontawesome-free/scss/solid";
+@import "@fortawesome/fontawesome-free/scss/solid";
 
 
 @import "mixins/function";
