fix: optimization of grid embedding

--- a/packages/base-ng/src/component/query/query-embedded.component.html
+++ b/packages/base-ng/src/component/query/query-embedded.component.html
@@ -1,4 +1,4 @@
-<div class="query-view" *ngIf="isReady$ | async">
+<div class="query-view">
 
   <txs-free-query-input
     *ngIf="options.freeQueryBuilder"
