fix: correct handling of queryOnInit flag

--- a/packages/base-ng/src/datatable/list-view/list-view.component.html
+++ b/packages/base-ng/src/datatable/list-view/list-view.component.html
@@ -38,7 +38,7 @@
 
 <ng-template #viewInfinite viewTemplate="infinite">
   <div class="list-container"
-       infiniteScroll
+       [infiniteScroll]="infiniteOnOff"
        [refresh]="refresh"
        [finished]="finished"
        [mode]="options.infiniteMode"
