chore(fix): correct style export in ng-theme-base

--- a/packages/ng-theme-base/src/scss/themes/admin/_styles.scss
+++ b/packages/ng-theme-base/src/scss/themes/admin/_styles.scss
@@ -1,11 +1,10 @@
 @import "variables";
+@import "~node_modules/@fortawesome/fontawesome-free/scss/variables";
 
 $fa-css-prefix: 'bat-icons';
-@import "@fortawesome/fontawesome-free/scss/mixins";
-@import "@fortawesome/fontawesome-free/scss/core";
-@import "@fortawesome/fontawesome-free/scss/variables";
-@import "@fortawesome/fontawesome-free/scss/solid";
-
+@import "~node_modules/@fortawesome/fontawesome-free/scss/mixins";
+@import "~node_modules/@fortawesome/fontawesome-free/scss/core";
+@import "~node_modules/@fortawesome/fontawesome-free/scss/solid";
 
 @import "mixins/function";
 
