--- a/packages/app-auth/src/styles/styles.scss
+++ b/packages/app-auth/src/styles/styles.scss
@@ -3,15 +3,18 @@ body, html {
   height: 100%;
 }
 
-@import "~bootstrap/dist/css/bootstrap.css";
-@import "~animate.css/animate.css";
-@import "~perfect-scrollbar/css/perfect-scrollbar.css";
+@import "~node_modules/bootstrap/scss/bootstrap";
+@import "animate.css/animate.css";
+@import "perfect-scrollbar/css/perfect-scrollbar.css";
 @import "icons-pct.css";
 
 $fa-font-path: '/assets/fonts/';
-@import "@fortawesome/fontawesome-free/scss/fontawesome";
-@import "@fortawesome/fontawesome-free/scss/brands";
-@import "@fortawesome/fontawesome-free/scss/solid";
+@import "~node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~node_modules/@fortawesome/fontawesome-free/scss/brands";
+@import "~node_modules/@fortawesome/fontawesome-free/scss/solid";
+
+@import "ag-grid-community/dist/styles/ag-grid.css";
+@import "ag-grid-community/dist/styles/ag-theme-balham.css";
 
 /**  =====================
      Google Font
@@ -19,4 +22,8 @@ $fa-font-path: '/assets/fonts/';
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600");
 
 
-@import "~prismjs/themes/prism-okaidia.css";
+@import "prismjs/themes/prism-okaidia.css";
+
+$theme-font-size: 1rem;
+@import "@typexs/ng-theme-base/styles/theme-admin";
+
