--- a/packages/base-ng/src/datatable/list-view/list-view.component.html
+++ b/packages/base-ng/src/datatable/list-view/list-view.component.html
@@ -46,7 +46,7 @@
        (onDataScroll)="onDataScroll($event)"
   >
     <!-- idx ist used by infiniteScroll directive -->
-    <div #rows class="row" [attr.idx]="node ? node.idx : -1" *ngFor="let node of getNodeData() | async">
+    <div #rows class="row item" [attr.idx]="node ? node.idx : -1" *ngFor="let node of getNodeData() | async">
       <div class="col-md-12" *ngIf="node">
         <txs-view [instance]="node.data"
                   [allowViewModeSwitch]="allowViewModeSwitch"
