test: correct test for infinite scroll

--- a/packages/base-ng/src/datatable/list-view/list-view.component.html
+++ b/packages/base-ng/src/datatable/list-view/list-view.component.html
@@ -11,7 +11,7 @@
   </txs-pager>
 
   <div class="list-container">
-    <div #rows class="row" *ngFor="let node of getNodeData() | async">
+    <div #rows class="row item" *ngFor="let node of getNodeData() | async">
       <div class="col-md-12">
         <txs-view [instance]="node.data"
                   [allowViewModeSwitch]="allowViewModeSwitch"
