fix: add freeQuery pass io from query to data component

--- a/packages/base-ng/src/component/query/query-embedded.component.html
+++ b/packages/base-ng/src/component/query/query-embedded.component.html
@@ -13,6 +13,7 @@
     [columns]="columns"
     [options]="options"
     [(params)]="params"
+    [(freeQuery)]="freeQuery"
     (doQuery)="doQuery($event)"
     (gridReady)="onGridReady($event)"
   ></txs-datatable>
