--- a/packages/ng-theme-base/src/scss/themes/admin/_styles.scss
+++ b/packages/ng-theme-base/src/scss/themes/admin/_styles.scss
@@ -12,6 +12,7 @@ $fa-css-prefix: 'bat-icons';
 @import "partials/general";
 @import "partials/generic";
 @import "partials/icons";
+@import "partials/dot-spinner";
 @import "partials/menu";
 @import "partials/form";
 @import "partials/radiobox-checkbox";
