--- a/packages/tasks-ng/src/components/log-viewer/tasks-log-viewer.component.scss
+++ b/packages/tasks-ng/src/components/log-viewer/tasks-log-viewer.component.scss
@@ -1,8 +1,5 @@
-.log {
-  overflow: auto;
-  height: 400px;
-}
 
-code[class*="language-"], pre[class*="language-"] {
-  font-size: 0.8em;
-}
+//
+//code[class*="language-"], pre[class*="language-"] {
+//  font-size: 0.8em;
+//}
