--- a/packages/app/src/styles/styles.scss
+++ b/packages/app/src/styles/styles.scss
@@ -4,17 +4,24 @@ body, html {
 }
 
 @import "~node_modules/bootstrap/scss/bootstrap";
-@import "animate.css/animate.css";
-@import "perfect-scrollbar/css/perfect-scrollbar.css";
+@import "~animate.css/animate.css";
+@import "~perfect-scrollbar/css/perfect-scrollbar.css";
 @import "icons-pct.css";
 
 $fa-font-path: '/assets/fonts/';
-@import "~node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
-@import "~node_modules/@fortawesome/fontawesome-free/scss/brands";
-@import "~node_modules/@fortawesome/fontawesome-free/scss/solid";
+// is in ng-theme-base
+//@import "~node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+//@import "~node_modules/@fortawesome/fontawesome-free/scss/brands";
+//@import "~node_modules/@fortawesome/fontawesome-free/scss/solid";
 
-@import "ag-grid-community/dist/styles/ag-grid.css";
-@import "ag-grid-community/dist/styles/ag-theme-balham.css";
+@import "~ag-grid-community/dist/styles/ag-grid.css";
+@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+
+@import "~prismjs/themes/prism.css";
+@import "~prismjs/plugins/toolbar/prism-toolbar.css";
+@import "~prismjs/plugins/line-numbers/prism-line-numbers.css";
+@import "~prismjs/themes/prism-okaidia.css";
+
 
 /**  =====================
      Google Font
@@ -22,8 +29,7 @@ $fa-font-path: '/assets/fonts/';
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600");
 
 
-@import "prismjs/themes/prism-okaidia.css";
 
 $theme-font-size: 1rem;
-@import "@typexs/ng-theme-base/styles/theme-admin";
+@import "~@typexs/ng-theme-base/styles/theme-admin";
 
