--- a/packages/tasks-ng/src/components/log-viewer/tasks-log-viewer.component.html
+++ b/packages/tasks-ng/src/components/log-viewer/tasks-log-viewer.component.html
@@ -1,30 +1,24 @@
 <div class="log-viewer">
-  <div class="row">
-    <div class="col-md-8">
-    </div>
-    <div class="col-md-4 text-right" *ngIf="allowSwitchMode">
+  <div class="d-flex justify-content-end">
+    <div class="text-right" *ngIf="allowSwitchMode">
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" [checked]="mode === 'tail'"
-                id="inlineRadio1" (click)="mode = 'tail'">
+               id="inlineRadio1" (click)="switchMode('tail')">
         <label class="form-check-label" for="inlineRadio1">Tail</label>
       </div>
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" [checked]="mode === 'less'"
-                id="inlineRadio2"  (click)="mode = 'less'">
+               id="inlineRadio2" (click)="switchMode('less')">
         <label class="form-check-label" for="inlineRadio2">Less</label>
       </div>
-    </div>
-
-  </div>
-
-
-  <div class="row">
-    <div class="col-md-6 text-right">Status</div>
-    <div class="col-md-6">
-      {{position}} of {{maxlines}}
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" [checked]="autoScroll"
+               id="inlineRadio3" (click)="switchAutoScroll()">
+        <label class="form-check-label" for="inlineRadio3">AutoScroll</label>
+      </div>
     </div>
   </div>
-  <div #logPanel class="log" *ngIf="log">
-    <pre class="language-shell">{{log}}</pre>
-  </div>
+
+  <txs-code [content]="log" language="log" [loading]="initialize" [scrollBottom]="running && autoScroll"></txs-code>
+
 </div>
