fix: minor fixes

--- a/packages/app/src/app/menu-demo/menu-demo.component.html
+++ b/packages/app/src/app/menu-demo/menu-demo.component.html
@@ -3,7 +3,7 @@
 
   <div>
     <pre class="language-html">
-      &lt;menu options="&#123; base: 'menu' }">&lt;/menu>
+      &lt;menu [options]="&lcub; base: 'menu' &rcub;">&lt;/menu>
     </pre>
     <p>Show menu starting from path 'menu'.</p>
 
